--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -422,6 +422,10 @@
 
             const captions = [
                 'chots hati ini',
+                'mama chots mama',
+                'maunya chots terus',
+                'tung tung tung sahurr',
+                'ikan hiu ikan lele, aqsa lucu banget lee',
                 'video ini bikin nagih',
                 'malam minggu sendirian',
                 'kenangan masa lalu',
