--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -442,6 +442,8 @@
             const comments = [
                 { user: "Bude Anung", text: "aqsa lucu banget" },
                 { user: "Bude Wati", text: "aqsa lagi apa itu" },
+                { user: "Mbah Akung", text: "aqsa mau es krim ngga" },
+                { user: "Pakde Iron", text: "aqsa mancing yukk" },
                 { user: "Mbah Uti", text: "aqsa 😍😍" }
             ];
             const commentMap = {}; // Objek untuk menyimpan komentar per video
