--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -465,6 +465,21 @@
             const profiles = [
                 { username: '@aqsa1610', icon: 'bi-person-circle' },
                 { username: '@video_addict', icon: 'bi-camera-video' },
+                { username: '@tung_tung', icon: 'bi-camera-video' },
+                { username: '@tung_tung', icon: 'bi-camera-video' },
+                { username: '@keren_guy', icon: 'bi-person-fill' },
+                { username: '@gamer_pro', icon: 'bi-controller' },
+                { username: '@tech_enthusiast', icon: 'bi-laptop' },
+                { username: '@nature_lover', icon: 'bi-tree' },
+                { username: '@foodie', icon: 'bi-cup-straw' },
+                { username: '@fashionista', icon: 'bi-bag-fill' },
+                { username: '@travel_junkie', icon: 'bi-airplane-engines-fill' },
+                { username: '@art_lover', icon: 'bi-palette-fill' },
+                { username: '@fitness_fanatic', icon: 'bi-heart-pulse-fill' },
+                { username: '@gadget_guru', icon: 'bi-phone-fill' },
+                { username: '@movie_buff', icon: 'bi-film' },
+                { username: '@book_worm', icon: 'bi-book-fill' },
+                { username: '@pet_lover', icon: 'bi-paw' },
                 { username: '@user_keren', icon: 'bi-emoji-sunglasses' },
                 { username: '@music_lover', icon: 'bi-music-note-beamed' },
                 { username: '@explore_id', icon: 'bi-geo-alt' }
