--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -365,7 +365,7 @@
         <div class="container-fluid d-flex justify-content-around">
             <a class="nav-link active refresh-trigger" href="#">
                 <i class="bi bi-house-door-fill"></i>
-                <span>Home</span>
+                <span>Beranda</span>
             </a>
             <a class="nav-link refresh-trigger" href="#">
                 <i class="bi bi-chat-dots-fill"></i>
@@ -456,6 +456,15 @@
                 'ketemu jodoh di sini',
                 'lagu ini enak banget!',
                 'pengen balik ke masa ini',
+                'video ini bikin baper',
+                'ngakak sampe sakit perut',
+                'kangen masa-masa ini',
+                'video ini bikin semangat',
+                'ngeliat ini bikin senyum',
+                'video ini bikin nostalgia',
+                'baper parah nontonnya',
+                'video ini bikin kangen',
+                'ngakak sampe lupa waktu',
                 'vibesnya dapet banget',
                 'pemandangan di akhir pekan'
             ];
