--- a/uji_tekuk/uji_tekuk.html
+++ b/uji_tekuk/uji_tekuk.html
@@ -56,7 +56,7 @@
         
         /* Gaya untuk footer */
         .footer {
-            margin-top: 2rem;
+            margin-top: 1rem;
             text-align: center;
             font-size: 0.9rem;
             color: #888;
@@ -120,8 +120,11 @@
             </div>
 
             <div class="mb-4">
-                <label for="drum" class="form-label">Diameter Drum (mm) <span id="rumus" class="formula-text"></span></label>
-                <input type="number" class="form-control" id="drum" placeholder="Contoh: 800" />
+                <label for="drum" class="form-label">Diameter Drum (mm)</label>
+                <div class="d-flex align-items-center">
+                    <input type="number" class="form-control me-3" id="drum" placeholder="Contoh: 800" style="max-width: 250px" />
+                    <span id="rumus" class="formula-text"></span>
+                </div>
             </div>
 
             <div class="mb-0 grid-2 result-group">
@@ -135,7 +138,7 @@
                 </div>
             </div>
 
-            <div class="footer">
+            <hr class="mt-4" /> <div class="footer">
                 Williyanto Adi 2025
             </div>
         </div>
