--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         </a>
       </div>
       <div class="col">
-        <a href="./lainnya/hitung_panjang_kabel.html" class="project-button btn-custom-5">
-          <i class="fas fa-ruler"></i><span>Hitung Panjang kabel</span>
+        <a href="./heatshock_test/heatshock_test.html" class="project-button btn-custom-5">
+          <i class="fas fa-ruler"></i><span>Pengujian Heatshock</span>
         </a>
       </div>
       <div class="col">
