--- a/9.coldbending_test/coldbending_test.html
+++ b/9.coldbending_test/coldbending_test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pengujian Heatshock</title>
+  <title>Pengujian Cold Bending</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     #catatanPerkalian em {
@@ -24,7 +24,7 @@
   <div class="card p-4 border border-secondary shadow-sm">
 
     <!-- Judul -->
-    <h2 class="text-center mb-2">Pengujian Heatshock</h2>
+    <h2 class="text-center mb-2">Pengujian Cold Bending</h2>
     <hr class="mt-0 mb-4">
 
     <!-- Input Diameter dan Manrel -->
@@ -42,7 +42,7 @@
     <!-- Teks Penjelasan -->
     <div class="text-center mb-4">
       <span id="catatanPerkalian" class="fst-italic d-block">
-        <em>Untuk diameter (user input) kalikan dengan 3, 8, 12</em>
+        <em>Untuk diameter (user input) kalikan dengan 8 atau 10</em>
       </span>
     </div>
 
@@ -52,7 +52,7 @@
     <div class="row mb-3">
       <div class="col-md-4 mb-3">
         <label class="form-label fw-bold">Suhu Pengujian</label>
-        <div><strong class="text-success">121°C ± 1°C</strong></div>
+        <div><strong class="text-success">-35°C ± 2°C</strong></div>
       </div>
       <div class="col-md-4 mb-3">
         <label class="form-label fw-bold">Durasi Pengujian</label>
@@ -68,7 +68,7 @@
     <div class="d-flex justify-content-center gap-3 mt-4">
       <button onclick="history.back()" class="btn btn-outline-secondary">🔙 Kembali</button>
       <a href="index.html" class="btn btn-outline-primary">🏠 Beranda</a>
-      <a href="cold_bending.html" class="btn btn-outline-info">❄️ Cold Bending</a>
+      <a href="heatshock.html" class="btn btn-outline-info">🔥 Heatshock</a>
     </div>
 
     <!-- Footer -->
@@ -87,12 +87,10 @@
 
       let faktor = null;
       if (!isNaN(diameter)) {
-        if (diameter >= 0 && diameter <= 19.05) {
-          faktor = 3;
-        } else if (diameter >= 19.08 && diameter <= 38.10) {
+        if (diameter >= 0 && diameter < 20.32) {
           faktor = 8;
-        } else if (diameter >= 38.13) {
-          faktor = 12;
+        } else if (diameter >= 20.32) {
+          faktor = 10;
         }
 
         if (faktor) {
@@ -104,12 +102,12 @@
         } else {
           manrel.value = "";
           manrel.classList.remove("fw-bold", "text-success");
-          catatan.innerHTML = `<em>Untuk diameter (user input) kalikan dengan 3, 8, 12</em>`;
+          catatan.innerHTML = `<em>Untuk diameter (user input) kalikan dengan 8 atau 10</em>`;
         }
       } else {
         manrel.value = "";
         manrel.classList.remove("fw-bold", "text-success");
-        catatan.innerHTML = `<em>Untuk diameter (user input) kalikan dengan 3, 8, 12</em>`;
+        catatan.innerHTML = `<em>Untuk diameter (user input) kalikan dengan 8 atau 10</em>`;
       }
     }
   </script>
