--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="col-6 col-md-6 col-lg-3">
           <a href="./6.yusup/chots_fix_banget.html" class="btn btn-primary btn-project">
-            <i class="fas fa-cloud"></i> YuSup Chots Kids
+            <i class="fas fa-cloud"></i> YuSup Chots
           </a>
         </div>
 
