--- a/index.html
+++ b/index.html
@@ -139,37 +139,37 @@
         </div>
         
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-primary btn-project">
+          <a href="./404.html" class="btn btn-primary btn-project">
             <i class="fas fa-cube"></i> Proyek 11
           </a>
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-success btn-project">
+          <a href="./404.html" class="btn btn-success btn-project">
             <i class="fas fa-laptop-code"></i> Proyek 12
           </a>
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-info btn-project">
+          <a href="./404.html" class="btn btn-info btn-project">
             <i class="fas fa-paper-plane"></i> Proyek 13
           </a>
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-warning btn-project">
+          <a href="./404.html" class="btn btn-warning btn-project">
             <i class="fas fa-lightbulb"></i> Proyek 14
           </a>
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-danger btn-project">
+          <a href="./404.html" class="btn btn-danger btn-project">
             <i class="fas fa-graduation-cap"></i> Proyek 15
           </a>
         </div>
         
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="#" class="btn btn-primary btn-project">
+          <a href="./404.html" class="btn btn-primary btn-project">
             <i class="fas fa-terminal"></i> Proyek 16
           </a>
         </div>
@@ -177,7 +177,7 @@
     </div>
 
     <footer class="footer">
-      <p>&copy; Williyanto Adi 2025</p>
+      <p>Williyanto Adi 2025</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
